fix broken css for white outlines on colors

--- a/src/styles/ColorPicker.css
+++ b/src/styles/ColorPicker.css
@@ -28,6 +28,7 @@
     z-index: 1;
     flex-shrink: 0;
     position: relative;
+    box-sizing: border-box;
   }
 
   .dropdown {
@@ -50,6 +51,10 @@
       transform: rotate(45deg);
       left: 27px;
       top: -10px;
+    }
+
+    .color {
+      border: 2px solid transparent;
     }
   }
 }
